// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SectionColumnLabels snapshots > should render one label 1`] = `
<DocumentFragment>
  <div
    class="_SectionColumnLabels_ed28d5"
    style="width: 100%;"
  >
    <span
      class="_Label_f37f38 _Label--secondary_f37f38 _SectionColumnLabels__label_ed28d5"
      style="font-size: 9px;"
    >
      Alignment
    </span>
  </div>
</DocumentFragment>
`;

exports[`SectionColumnLabels snapshots > should render two labels 1`] = `
<DocumentFragment>
  <div
    class="_SectionColumnLabels_ed28d5"
    style="width: 100%;"
  >
    <span
      class="_Label_f37f38 _Label--secondary_f37f38 _SectionColumnLabels__label_ed28d5"
      style="font-size: 9px;"
    >
      X
    </span>
    <span
      class="_Label_f37f38 _Label--secondary_f37f38 _SectionColumnLabels__label_ed28d5"
      style="font-size: 9px;"
    >
      Y
    </span>
  </div>
</DocumentFragment>
`;
